--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,11 @@
         <commons.text.version>1.8</commons.text.version>
         <lombok.version>1.18.10</lombok.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <junit.version>5.5.2</junit.version>
         <jwt.version>3.8.3</jwt.version>
         <jjwt.version>0.10.7</jjwt.version>
 
-        <junit.version>5.5.2</junit.version>
-        <junit.platform.version>1.5.2</junit.platform.version>
+        <junit.version>5.6.2</junit.version>
+        <junit.platform.version>1.6.2</junit.platform.version>
 
         <spring.boot.version>2.1.9.RELEASE</spring.boot.version>
     </properties>
@@ -259,25 +258,27 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Only needed to run tests in a version of IntelliJ IDEA that bundles older versions -->
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-launcher</artifactId>
-            <scope>test</scope>
-            <version>${junit.platform.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-commons</artifactId>
-            <scope>test</scope>
-            <version>${junit.platform.version}</version>
-        </dependency>
+<!--        &lt;!&ndash; Only needed to run tests in a version of IntelliJ IDEA that bundles older versions &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.junit.platform</groupId>-->
+<!--            <artifactId>junit-platform-launcher</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--            <version>${junit.platform.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.junit.platform</groupId>-->
+<!--            <artifactId>junit-platform-commons</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--            <version>${junit.platform.version}</version>-->
+<!--        </dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter &ndash;&gt;-->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.mockito/mockito-core &ndash;&gt;-->
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.2.4</version>
+            <version>3.3.3</version>
             <scope>test</scope>
         </dependency>
 
