--- a/spring-creed-test/pom.xml
+++ b/spring-creed-test/pom.xml
@@ -30,6 +30,12 @@
             <version>${org.mapstruct.version}</version>
             <scope>provided</scope>
         </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+        <scope>test</scope>
+      </dependency>
 
 
     </dependencies>
